# pyfecto

./: CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
examples/: weather_app.py
src/pyfecto/: collections.py  pyio.py  runtime.py
tests/: test_app.py  test_collections.py  test_collections_lazy.py  test_pyio.py
