[tool.poetry]
name = "pyfecto"
description = "A simple yet powerful library for handling effects and errors in Python"
authors = ["fernanluyano"]
license = "MIT"
readme = "README.md"
packages = [
]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.11"
gitpython = "^3.1.0"

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0"
]
# See https://github.com/mtkennerly/poetry-dynamic-versioning
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }